fix: zoom-out center alignment

--- a/src/Sections/AboutUs/AboutUs.css
+++ b/src/Sections/AboutUs/AboutUs.css
@@ -1,6 +1,5 @@
 
 .aboutus{
-    height: 100vh;
     background: FFFFFF, 100%;
     justify-content: center;
     
