--- a/src/Sections/Event/Event.css
+++ b/src/Sections/Event/Event.css
@@ -1,8 +1,9 @@
 .list-wrapper {
   position: relative;
   padding: 20px 80px 20px 40px;
+  max-width: 2265px;
+  margin: 0 auto;
 }
-
 .black-line {
   background: black;
   width: 9px;
@@ -10,7 +11,7 @@
   position: absolute;
   margin-left: 90px;
 }
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
   .black-line {
     background: black;
     width: 9px;
@@ -19,9 +20,9 @@
     margin-left: 35px;
   }
   .list-wrapper {
-  position: relative;
-  padding: 20px 50px 20px 40px;
-}
+    position: relative;
+    padding: 20px 50px 20px 40px;
+  }
 }
 @media screen and (max-width: 600px) {
   .black-line {
